gitops-repo/manifests/alerta/alerta-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alerta-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: alerta.poc.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alerta-server
            port:
              number: 8080
